# classy-admin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  manage.py  pyproject.toml
classy_admin/: __init__.py  apps.py  dashboards.py  menus.py  registries.py  settings.py  tables.py
classy_admin/adminlte3/templates/: change_form.html
classy_admin/adminlte3/templates/classy_admin/: _delete_modal.html  _detail_fields.html  _filter_form.html  _list_actions_buttons.html  _modal.html  base.html  base_detail.html  base_site.html  base_template.html  detail.html  form.html  list.html
classy_admin/adminlte3/templates/formsets/: _delete_button.html  _up_down_buttons.html
classy_admin/adminlte4/management/commands/: compilescss.py
classy_admin/adminlte4/static/css/: classy_admin.css
classy_admin/adminlte4/static/js/: django-select2.js  jquery-formset.js
classy_admin/adminlte4/templates/: base.html  confirm_delete.html  dashboard.html  detail.html  form.html  layout.html  list.html  modal.html
classy_admin/adminlte4/templates/accounts/: base.html  logged_out.html  login.html  logout.html  password_change_form.html  password_reset_form.html
classy_admin/adminlte4/templates/classy_admin/: base.html  confirm_delete.html  dashboard.html  detail.html  form.html  layout.html  list.html  modal.html
classy_admin/fields/: file.py
classy_admin/forms/: fields.py  select2.py  widgets.py
classy_admin/templatetags/: actions_tags.py  placeholder_image.py
classy_admin/views/: __init__.py  aaa.py  accounts.py  bulk.py  dashboard.py  detail.py  edit.py  form_wizard.py  inline.py  list.py  list_table.py  log.py  mixins.py  responses.py  select2.py  tabs.py
classy_admin/viewsets/: __init__.py  accounts.py  actions.py  base.py  breadcrumbs.py  crud.py  home.py  log.py  mixins.py
demo_project/: settings.py  urls.py
demo_project/sample_app/: apps.py
demo_project/sample_app/views/: user.py
(+43 files in other folders)
