[tool.poetry]
name = "django-classy-admin"
version = "0.1.0"
description = "Django extensible admin interface with bootstrap template"
authors = ["Roldão Rego Jr. <roldaogjr@gmail.com>"]
license = "MPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.9"
django-simple-menu = "^2.1.3"
django-crispy-forms = "^2.3"
django-dynamic-preferences = "^1.16.0"
django-extra-views = "^0.15.0"
django-select2 = "^8.2.1"
django-filter = "^24.3"
django-tables2 = "^2.7.0"
django-render-block = "^0.10"
django-htmx = "^1.20.0"
django-extensions = "^3.2.3"
crispy-bootstrap4 = "^2024.10"
crispy-bootstrap5 = "^2024.10"
django-sass-processor = "^1.4.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
factory-boy = "^3.3.1"
black = "^24.10.0"
djlint = "^1.35.2"

[tool.poetry.group.test.dependencies]
coverage = "^7.3.2"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
use_gitignore=true
ignore="H005,H006,H013,H021,H030,H031"
